# yo-esp

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
assets/sound/: ding_esp.raw
examples/: play-esp.sh
scripts/: release.sh
src/: lib.rs  microphone.rs
