[package]
name = "yo-esp"
version = "0.1.2"
edition = "2024"

description = "ESP32-client for the yo voice assistant framework (no_std + alloc)"
license = "MIT"
repository = "https://github.com/QuackHack-McBlindy/yo-esp"
authors = ["QuackHack-McBlindy"]
readme = "README.md"
keywords = ["embedded", "i2s", "audio", "embassy", "no-std"]
categories = ["embedded", "network-programming"]

[lib]
crate-type = ["lib"]

[dependencies]
esp-hal = { version = "1.1.0-rc.0", features = ["esp32s3", "unstable"] }
embassy-net = { version = "0.9.0", features = ["tcp", "proto-ipv4", "medium-ethernet"] }
embassy-time = "0.5.0"
embassy-futures = "0.1.0"
embassy-sync = "0.8.0"
embassy-executor = "0.10.0"
defmt = "1.0.0"
